<resources>
    <string name="app_name">biocheckmovil</string>

    <string name="lbl_company">Subdomain</string>
    <string name="lbl_employee_id">Employee Id</string>
    <string name="lbl_nip">Nip</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_error_employe_id_not_found">Employe Id not found or not enabled</string>
    <string name="lbl_error_nip_incorrect">Nip Incorrect</string>
    <string name="lbl_error_company_not_found">Company not found</string>
    <string name="lbl_error_unknown">Unknown Error</string>
    <string name="lbl_error_network">Network Error, please try again.</string>
    <string name="lbl_enroll_stage">Enroll Stage</string>
    <string name="lbl_now_we_take">Now, we take some pictures of your face to enroll in the app. Please, take with enough light.</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_take">Take</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_error_invalid_picture">User doesn\'t match, try again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbl_check_in">check in</string>
    <string name="lbl_check_out">Check Out</string>
    <string name="lbl_view_route">View route</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_error_cant_be_empty">Can´t be empty</string>
    <string name="lbl_error_cant_check">Can\'t check, please try again</string>
    <string name="lbl_check_successful">Check has been successful</string>
    <string name="lbl_doing_check">Doing Check</string>
    <string name="lbl_no_have_routes">You don\'t have any Route</string>
    <string name="lbl_today">Today</string>
    <string name="snack_no_conection_retry">Connection Problems, Do you want retry?</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_error_wrong_picture">The picture has low quality, please retry.</string>
    <string name="lbl_error_invalid_user">The employee is not enabled</string>
    <string name="snack_invalid_gps_position">Invalid GPS position</string>
    <string name="lbl_check">CHECK</string>
    <string name="lbl_routes">ROUTES</string>
    <string name="lbl_checks">CHECKS</string>
</resources>
